# platefeapy

./: MANIFEST.in  README.md  app.py  pyproject.toml
casestudies/: common.py  cs01_ss_navier.py  cs02_clamped.py  cs03_levy.py  cs04_circular.py  cs05_rectangular_aspect.py  cs06_patch_load.py  cs07_cantilever_plate.py  cs08_point_load.py  cs09_thermal.py  cs10_settlement.py  cs11_kirchhoff_vs_mindlin.py  cs12_patch_test.py  cs13_chimney.py  cs14_box_girder.py  run_all.py
docs/: _config.yml  en-01-installation.md  en-02-quick-start.md  en-03-structural-model.md  en-04-element-types.md  en-05-loads.md  en-06-supports.md  en-07-solution.md  en-08-post-processing.md  en-09-plotly-charts.md  en-10-modal-analysis.md  en-11-conventions.md  en-12-api-reference.md  en-13-testing-validation.md  en-14-usage-examples.md  en-15-web-ui.md  en-16-shape-functions.md  index.md  it-01-installation.md  it-02-quick-start.md  it-03-structural-model.md  it-04-element-types.md  it-05-loads.md  it-06-supports.md  it-07-solution.md  it-08-post-processing.md  it-09-plotly-charts.md  it-10-modal-analysis.md  it-11-conventions.md  it-12-api-reference.md  it-13-testing-validation.md  it-14-usage-examples.md  it-15-web-ui.md  it-16-shape-functions.md
docs/casestudies/: cs01-ss-navier.md  cs02-clamped.md  cs03-levy.md  cs04-circular.md  cs05-rectangular-aspect.md  cs06-patch-load.md  cs07-cantilever-plate.md  cs08-point-load.md  cs09-thermal.md  cs10-settlement.md  cs11-kirchhoff-vs-mindlin.md  cs12-patch-test.md  cs13-chimney.md  cs14-box-girder.md  (+1 more)
examples/: ex01_simply_supported.py  ex02_clamped.py  ex03_point_load.py
platefeapy/: __init__.py  element.py  integration.py  loads.py  material.py  model.py  node.py  postprocess.py  section.py  shell.py
scripts/: generate_doc_images.py
tests/: test_plate.py
usage_examples/: 01_convergence_ss_plate.py  02_clamped_plate.py  03_modal_analysis.py
validation/: validate_ss_plate.py
(+2 files in other folders)
